fixed overflow when all 3 live counters are enabled at once

--- a/frontend/src/styles/test.scss
+++ b/frontend/src/styles/test.scss
@@ -78,6 +78,8 @@
     grid-auto-flow: column;
     justify-content: center;
     gap: 5rem;
+    width: 0;
+    margin: 0 auto;
 
     #liveWpm {
       opacity: 0;
